# smoothdists

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: barnes_hut_smoothness_test.cpp  benchmark_cpu.cpp  benchmark_gpu.cu  beta_error_test.cpp  rigid_body_simulator.cpp  scene_builder.cpp  sphere_tracer_gpu.cu
cmake/: libigl.cmake  pybind11.cmake
include/: adjacencies.h  bvh.h  camera.h  closest_point.h  collapse_small_triangles_wrapper.h  image.h  inertia_tensor.h  interior_point.h  matrix.h  matrix_log.h  rigid_body_incremental_potential.h  rodrigues.h  scene.h  smooth_dist.h  smooth_dist_mesh.h  sphere_trace.h  utility.h  vector.h  weight_function.h
mex/: build_distance_bvh.cpp  smooth_min_distance.cpp
plugin/: smoothdists_bindings.cpp
scenes/: bowl.json  bunny.json  deer.json  hex_torus.json  lidar.json  net.json  torus.json
scripts/: run_bench.sh  run_bench_gpu.sh
sims/: bike_city.json  bunny_bowl.json  bunny_bunny.json  bunny_bunny_both.json  bunny_bunny_plane.json  bunny_lidar.json  cube_cube.json  ico_bowl.json  octopus_lidar.json  point_bowl2d.json  point_lidar.json  point_line.json  point_v.json  sphere_slide.json  sphere_sphere.json  spikeball_bowl.json  trefoil_ringtoss.json
src/: adjacencies.cpp  bvh.cpp  camera.cpp  closest_point.cpp  closest_point.cu  collapse_small_triangles_wrapper.cpp  inertia_tensor.cpp  interior_point.cpp  matrix.cpp  matrix_log.cpp  rigid_body_incremental_potential.cpp  rodrigues.cpp  scene.cpp  smooth_dist.cpp  smooth_dist.cu  smooth_dist_mesh.cpp  sphere_trace.cpp  sphere_trace.cu  vector.cpp  vector.cu  weight_function.cpp  weight_function.cu
